[gd_scene load_steps=8 format=2]

[ext_resource path="res://shared_ressource/radial.png" type="Texture" id=1]
[ext_resource path="res://gameplay/Explosion.gd" type="Script" id=2]
[ext_resource path="res://shared_ressource/explosion.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.619048, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.3
angular_velocity = 720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 50.0
scale = 15.0
scale_curve = SubResource( 3 )
color = Color( 0.996078, 0.301961, 0, 1 )

[node name="Explosion" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 2.0
color = Color( 1, 0.329412, 0, 1 )
energy = 1.5
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ExplosionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 60
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 4 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -1.213
pitch_scale = 0.88
autoplay = true
max_distance = 1500.0
attenuation = 4.43827
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
